clean up some todos

--- a/main.bib
+++ b/main.bib
@@ -1861,6 +1861,23 @@ MRREVIEWER = {Alan Koch},
        URL = {http://dx.doi.org/10.1112/S0010437X12000723},
 }
 
+@article {Krause,
+    AUTHOR = {Krause, Henning},
+     TITLE = {Smashing subcategories and the telescope conjecture---an
+              algebraic approach},
+   JOURNAL = {Invent. Math.},
+  FJOURNAL = {Inventiones Mathematicae},
+    VOLUME = {139},
+      YEAR = {2000},
+    NUMBER = {1},
+     PAGES = {99--133},
+      ISSN = {0020-9910},
+   MRCLASS = {55P42 (18E30 55P60 55P65)},
+  MRNUMBER = {1728877},
+MRREVIEWER = {Paul G. Goerss},
+       URL = {https://doi.org/10.1007/s002229900022},
+}
+
 @article{KreckStolz,
   title={{$\mathbb H^2$}-bundles and elliptic homology},
   author={Kreck, Matthias and Stolz, Stephan},
@@ -2231,6 +2248,38 @@ MRREVIEWER = {Edgar H. Brown, Jr.},
   pages={865--898},
   year={1993},
   publisher={Elsevier}
+}
+
+@incollection {MRS,
+    AUTHOR = {Mahowald, Mark and Ravenel, Douglas and Shick, Paul},
+     TITLE = {The triple loop space approach to the telescope conjecture},
+ BOOKTITLE = {Homotopy methods in algebraic topology ({B}oulder, {CO},
+              1999)},
+    SERIES = {Contemp. Math.},
+    VOLUME = {271},
+     PAGES = {217--284},
+ PUBLISHER = {Amer. Math. Soc., Providence, RI},
+      YEAR = {2001},
+   MRCLASS = {55P42 (55P35 55P60 55T10)},
+  MRNUMBER = {1831355},
+MRREVIEWER = {N. J. Kuhn},
+       URL = {https://doi.org/10.1090/conm/271/04358},
+}
+
+@article {MahowaldSadofsky,
+    AUTHOR = {Mahowald, Mark and Sadofsky, Hal},
+     TITLE = {{$v_n$} telescopes and the {A}dams spectral sequence},
+   JOURNAL = {Duke Math. J.},
+  FJOURNAL = {Duke Mathematical Journal},
+    VOLUME = {78},
+      YEAR = {1995},
+    NUMBER = {1},
+     PAGES = {101--129},
+      ISSN = {0012-7094},
+   MRCLASS = {55P42 (55P60 55Q10 55T15)},
+  MRNUMBER = {1328754},
+MRREVIEWER = {N. J. Kuhn},
+       URL = {https://doi.org/10.1215/S0012-7094-95-07806-5},
 }
 
 @article{MahowaldShick,
@@ -2873,6 +2922,21 @@ MRREVIEWER = {A. Liulevicius},
    MRCLASS = {55-02 (55Qxx 57-02)},
   MRNUMBER = {860042 (87j:55003)},
 MRREVIEWER = {Joseph Neisendorfer},
+}
+
+@incollection {RavenelObit,
+    AUTHOR = {Ravenel, Douglas C.},
+     TITLE = {Life after the telescope conjecture},
+ BOOKTITLE = {Algebraic {$K$}-theory and algebraic topology ({L}ake
+              {L}ouise, {AB}, 1991)},
+    SERIES = {NATO Adv. Sci. Inst. Ser. C Math. Phys. Sci.},
+    VOLUME = {407},
+     PAGES = {205--222},
+ PUBLISHER = {Kluwer Acad. Publ., Dordrecht},
+      YEAR = {1993},
+   MRCLASS = {55P42 (19D99 55P60)},
+  MRNUMBER = {1367299},
+       URL = {https://doi.org/10.1007/978-94-017-0695-7_10},
 }
 
 @article {RavenelLocalizationWRTPeriodic,
