--- a/powerops.tex
+++ b/powerops.tex
@@ -68,23 +68,11 @@ MU[6, \infty)^0(X) \arrow["\phi"]{r} \arrow["P_{\Sigma_n}^{MU[6, \infty)}(X)"]{d
 MU[6, \infty)^0(B\Sigma_n \times X) \arrow["P_{\Sigma_n}(\phi)"]{r} & E^0(B\Sigma_n \times X).
 \end{tikzcd}
 \end{center}
-Before understanding the maps in this commutative diagram, we must understand its nodes.  There is a natural map \[E^0(B\Sigma_n) \otimes_{E^0} E^0(X) \to E^0(B\Sigma_n \times X),\] and whether it is to an equivalence is highly dependent on the structure of \(E^0(B\Sigma_n)\) itself---for instance, this would be the case if \(E^0(B\Sigma_n)\) were flat as an \(E^0\)--module.  For this reason, we are strongly motivated to feel out any foothold on this object that we are able to find, and a critical such foothold is the chromatic character theory of Hopkins, Kuhn, and Ravenel~\cite{HKR}.  Their theorems describe the Morava \(E\)--cohomology of a finite group with certain forms of torsion (e.g., \(p\)--torsion) deleted, and we give an introduction to their results in this Lecture.
+Before understanding the maps in this commutative diagram, we must understand its nodes.  There is a natural map \[E^0(B\Sigma_n) \otimes_{E^0} E^0(X) \to E^0(B\Sigma_n \times X),\] and whether it is to an equivalence is highly dependent on the structure of \(E^0(B\Sigma_n)\) itself---for instance, this would be the case if \(E^0(B\Sigma_n)\) were flat as an \(E^0\)--module.  For this reason, we are strongly motivated to feel out any foothold on this object that we are able to find, and a critical such foothold is the chromatic character theory of Hopkins, Kuhn, and Ravenel~\cite{HKR}.  Their theorems describe the Morava \(E\)--cohomology of a finite group with certain forms of torsion (e.g., \(p\)--torsion) deleted, and we give an introduction to their results in this Lecture.\footnote{The intrepid reader who finds this material interesting should also look at the paper by Greenlees--Strickland~\cite{GreenleesStrickland} and by Morava~\cite{MoravaLocalFieldsExtraordinaryKthy}, which give two (quite divergent) accounts of the formal geometry at work in this section.}
 
-\todo[inline]{Cross-references into the books
-Make sure there are no double-hats in A.1
-Make sure *all* Homs got changed to CatOf and InternalHom in A.1. (TopologicalGroupoids should be internal.)
-Make sure that the introduction says all of this is in HKR
-Morava's \textit{Local fields} paper; 
-Theorem 2.6 of Greenlees--Strickland;
 
-Insert Schlank-Stapleton reference into Strickland’s Theorem subsection
-Kuhn citation
-Equation labels?
-\(p\)--divisible group notation}
 
 \input{characters}
-
-
 
 
 
