--- a/finite.tex
+++ b/finite.tex
@@ -8,7 +8,7 @@ Our goal in this Case Study is to thoroughly examine one of the techniques from 
 
 Abstractly, one can hope to study any sheaf, including \(\context{E}(X)\), by analyzing its stalks---or, relatedly (with some luck), by analyzing its geometric fibers.  The main utility of Quillen's theorem is that it gives us access to a concrete model of the context \(\context{MUP}\), so that we can determine where to even look for those fibers.  However, even this is not really enough to get off the ground: the stalks of some sheaf can exhibit nearly arbitrary behavior, and in particular there is little reason to expect the stalks of \(\context{E}(X)\) to vary nicely with \(X\).  In an ideal world, these stalks would themselves vary so nicely with \(X\) as to form homology theories, carrying cofiber sequences to short exact sequences of stalks.  In general, one might ask whether a map \(f\) as in the diagram
 \begin{center}
-\begin{tikzcd}[row sep=1em]
+\begin{tikzcd}[row sep=0.8em]
 \Spec R \arrow{r}{f} & \moduli{fgl} \arrow[equal]{r} \arrow{d} & \context{MUP}[0] \arrow{d} \arrow[equal]{r} & \Spec MUP_0 \\
 & \moduli{fg} \arrow[equal]{r} \arrow[leftarrow]{lu} & \context{MUP},
 \end{tikzcd}
@@ -433,7 +433,7 @@ This complex plays a recognizable role: it computes \(\Cotor_{k\ps{x}}(k, k)\), 
 to which we apply \((-) \otimes_{\Q[t]} \Q\) to calculate \[H^* \InternalHom{FormalSchemes}(B\G_a, \G_a)(\Q) = \begin{cases} \Q & \text{when \(* = 0\)}, \\ \Q & \text{when \(* = 1\)}, \\ 0 & \text{otherwise}. \end{cases}\] This means that every \(2\)--cocycle is a coboundary, symmetric or not.
 \item[\(\F_p\):] Now we are computing \(\Ext\) over a free commutative \(\F_p\)--algebra on one generator with divided powers.  Such an algebra splits as a tensor of truncated polynomial algebras, and again computing a minimal free resolution results in the calculation
 \[H^* \InternalHom{FormalSchemes}(B\G_a, \G_a)(\F_p) =\hspace{12em}\]
-\[\hspace{9em}=
+\[\hspace{8.5em}=
 \begin{cases}
 \frac{\F_p[\alpha_k \mid k \ge 0]}{\alpha_k^2 = 0} \otimes \F_p[\beta_k \mid k \ge 0] & \text{when \(p > 2\)}, \\
 \F_2[\alpha_k \mid k \ge 0] & \text{when \(p = 2\)},
@@ -584,9 +584,9 @@ implicitly taking \(m_1 = 1\) and \(v_0 = p\).
 The \index{Kudo Araki map@Kudo--Araki map}\textit{Kudo--Araki map} determined by \Cref{pTypLawsHaveNicePSeries} \[\Z_{(p)}[v_1, v_2, \ldots, v_d, \ldots] \xrightarrow{v} \sheaf O_{\moduli{fgl}^{\ptyp}}\] is an isomorphism.
 \end{theorem}
 \begin{proof}
-Begin with a universal group law over the ring \(\sheaf O_{\moduli{fgl}}\).  This group law \(p\)--typifies by \Cref{EveryFGLIsPTypical} to a second group law which is selected by a map \(\eps\co \sheaf O_{\moduli{fgl}} \to \sheaf O_{\moduli{fgl}}\).  The following diagram includes the image factorization of \(\eps\), as well as its rationalization and the map \(v\):
+Begin with a universal group law over the ring \(\sheaf O_{\moduli{fgl}}\).  This group law \(p\)--typifies by \Cref{EveryFGLIsPTypical} to a second group law which is selected by a map \(\eps\co \sheaf O_{\moduli{fgl}} \to \sheaf O_{\moduli{fgl}}\).  The following diagram incorporates the image factorization of \(\eps\), its rationalization, and the map \(v\):
 \begin{center}
-\begin{tikzcd}[column sep=-0.4em]
+\begin{tikzcd}[column sep=-0.8em]
 & \sheaf O_{\moduli{fgl}} \arrow["s"]{rdd} \arrow["\eps"]{rrd} \arrow{rrr} & & & \sheaf O_{\moduli{fgl}} \otimes \Q \arrow["\eps"]{rrd} \arrow["s" near end]{rdd} \\
 & & & \sheaf O_{\moduli{fgl}} \arrow[crossing over]{rrr} & & & \sheaf O_{\moduli{fgl}} \otimes \Q \\
 \Z_{(p)}[v_1, \ldots, v_d, \ldots] \arrow["v"]{rr} & & \sheaf O_{\moduli{fgl}^{\ptyp}} \arrow["i"]{ru} \arrow{rrr} & & & \sheaf O_{\moduli{fgl}^{\ptyp}} \otimes \Q \arrow["i"]{ru}.
@@ -668,11 +668,11 @@ The results of this section have several alternative forms in the literature.  F
 
 \begin{remark}[{\cite[Section IV.9]{LazardCFGs}, \cite[Section 17.5]{Hazewinkel}}]\label{ArtinHasseExponential}
 The operation of \(p\)--typification often gives ``unusual'' results.  For instance, we will examine the standard multiplicative formal group law of \Cref{GmAndItsLogExample}, its rational logarithm, and its rational exponential:
-\begin{align*}
-x +_{\G_m^{\mathrm{std}}} y & = x + y - xy, &
-\log_{\G_m^{\mathrm{std}}}(x) & = -\log(1 - x), &
-\exp_{\G_m^{\mathrm{std}}}(x) & = 1 - \exp(-x).
-\end{align*}
+\[
+x +_{\G_m^{\mathrm{std}}} y = x + y - xy, \quad
+\log_{\G_m^{\mathrm{std}}}(x) = -\log(1 - x), \quad
+\exp_{\G_m^{\mathrm{std}}}(x) = 1 - \exp(-x).
+\]
 By \Cref{EveryLogHaspTypification}, we see that the \(p\)--typification of this rational logarithm takes the form \[\log_{\G_m^{\ptyp}}(x) = \sum_{j=0}^\infty \frac{x^{p^j}}{p^j}.\]  We can couple this to the standard exponential of the rational multiplicative group
 \begin{center}
 \begin{tikzcd}
@@ -722,14 +722,14 @@ For a formal group \(\Gamma\co \Spec k \to \moduli{fg}\), the definition is form
 \begin{definition}[{\cite[Section 2.4]{RezkFelixKlein}, cf.\ \cite[Section 6]{StricklandFiniteSubgps}}]\label{LubinTateDefn}
 Define \((\moduli{fg})^\wedge_\Gamma\), the \index{Lubin Tate stack@Lubin--Tate stack}\textit{Lubin--Tate stack}, to be the groupoid-valued functor from the category of infinitesimal thickenings of \(k\)\footnote{We are being somewhat cavalier by using the word ``stack'' to refer to a groupoid-valued functor that we have \emph{not} defined on all rings, as opposed to the usage in \Cref{FHGivesComodules} and \Cref{WarningAboutStacks}.  The reader is advised to privilege the word ``stack'' with the same flexibility as the word ``sheaf'', which many authors freely take to have quite exotic source categories and which satisfy unusual and varied descent properties.} which on such a thickening \(R\) has objects
 \begin{center}
-\begin{tikzcd}[row sep=4em, column sep=3em]
+\begin{tikzcd}[row sep=2.5em, column sep=4em]
 & \moduli{fg} \\
 \Spec k
 \arrow["\Gamma", bend left]{ru}
 &
 \Spec R/\m
-\arrow[bend left]{u}[name=L,label=left:\(i^* \Gamma\)]{}
-\arrow[bend right]{u}[name=R,label=right:\(\pi^* \G\)]{}
+\arrow[bend left=45]{u}[name=L,label=left:\(i^* \Gamma\)]{}
+\arrow[bend right=45]{u}[name=R,label=right:\(\pi^* \G\)]{}
 \arrow[shorten <=6pt, Rightarrow, to path={(L) -- node[label=above:\(\alpha\)] {} (R)}]{}
 \arrow["i"']{l}
 \arrow["\pi"]{r}
@@ -745,7 +745,7 @@ where \(i\) is an inclusion of \(k\) into the residue field \(R/\m\) and \(\alph
 \begin{remark}[{cf.\ \cite[Section 4.1]{RezkNotesOnHMThm}}]\label{LubinTateStackInFGLTerms}
 Because the ground field \(k\) is a local ring, the formal group \(\Gamma\co \Spec k \to \moduli{fg}\) at the special fiber always has trivializable Lie algebra, hence \Cref{CoordinatizbleFGs} shows that it always admits a presentation by a formal group law.  In fact, any deformation \(\G\co \Spf R \to \moduli{fg}\) of \(\Gamma\) also has a trivializable Lie algebra, since projective modules (such as \(T_0 \G\)) over local rings like \(R\) are automatically free (i.e., trivializable).  It follows that the groupoid \((\moduli{fg})^\wedge_\Gamma(R)\) admits a presentation in terms of formal group \emph{laws}.  Starting with the pullback square of groupoids
 \begin{center}
-\begin{tikzcd}
+\begin{tikzcd}[row sep=1.5em]
 (\moduli{fg})^\wedge_\Gamma(R) \arrow{d} \arrow{rr} \arrow[drr, phantom, "\lrcorner", very near start] & & \moduli{fg}(R) \arrow{d} \\
 \displaystyle\coprod_{i\co \Spec R/\m \to \Spec k} \{\Gamma\} \arrow{r} & \displaystyle\coprod_{i\co \Spec R/\m \to \Spec k} \moduli{fg}(k) \arrow{r} & \moduli{fg}(R/\m)
 \end{tikzcd}
