--- a/mo.tex
+++ b/mo.tex
@@ -768,7 +768,7 @@ There is a bijection between homotopy classes of ring maps \(MO \to \HFtwo P\) a
 \begin{proof}
 We extend the square in the \Cref{DetectingMORingMapsInHomotopy} using the following diagram:
 \begin{center}
-\begin{tikzcd}
+\begin{tikzcd}[column sep=1em]
 \CatOf{Modules}_{\F_2}(\HFtwo P_0(MO(1)), \F_2) & \CatOf{Modules}_{\F_2}(\HFtwo P_0(MO), \F_2) \arrow{l} \\
 \left\{f\co \HFtwo P_0(MO(1)) \to \F_2 \middle| f(\beta_0') = 1\right\} \arrow[hookrightarrow]{u} \arrow[equal]{r} & \arrow[hookrightarrow]{u} \CatOf{Algebras}_{\F_2/}(\HFtwo P_0(MO), \F_2),
 \end{tikzcd}
