--- a/quillen.tex
+++ b/quillen.tex
@@ -78,7 +78,13 @@ we see that we can pick out the original mapping set by passing to a quotient of
 \end{proof}
 
 \begin{definition}
-The ring of functions appearing in the proof above fits into an exact sequence \[0 \to \Omega_{A/R} \to \left. A\{1, \operatorname{d\mathit{a}} \mid a \in A\} \middle/ \left( \begin{array}{c} \text{\(\operatorname{d\mathit{r}} = 0\) for \(r \in R\)}, \\ \operatorname{d}(a_1 a_2) = \operatorname{d\mathit{a}_1} \cdot a_2 + a_1 \cdot \operatorname{d\mathit{a}_2} \end{array} \right) \right. \to A\{1\} \to 0.\]  The kernel \(\Omega_{A/R}\) is called the module of \index{Kahler differentials@K\"ahler differentials}\textit{K\"ahler differentials} (of \(A\), relative to \(R\)).  The map \(\operatorname d\co A\to \Omega^1_{A/R}\) is the universal \(R\)--linear derivation into an \(A\)--module, i.e., \[\CatOf{Derivations}_R(A, M) = \CatOf{Modules}_A(\Omega^1_{A/R}, M).\]
+The ring of functions appearing in the proof above fits into an exact sequence
+\begin{align*}
+0 & \to \Omega_{A/R} \\
+& \to \left. A\{1, \operatorname{d\mathit{a}} \mid a \in A\} \middle/ \left( \begin{array}{c} \text{\(\operatorname{d\mathit{r}} = 0\) for \(r \in R\)}, \\ \operatorname{d}(a_1 a_2) = \operatorname{d\mathit{a}_1} \cdot a_2 + a_1 \cdot \operatorname{d\mathit{a}_2} \end{array} \right) \right. \\
+& \to A\{1\} \to 0.
+\end{align*}
+The kernel \(\Omega_{A/R}\) is called the module of \index{Kahler differentials@K\"ahler differentials}\textit{K\"ahler differentials} (of \(A\), relative to \(R\)).  The map \(\operatorname d\co A\to \Omega^1_{A/R}\) is the universal \(R\)--linear derivation into an \(A\)--module, i.e., \[\CatOf{Derivations}_R(A, M) = \CatOf{Modules}_A(\Omega^1_{A/R}, M).\]
 \end{definition}
 
 The upshot of this calculation is that \(\Spec A/I^2\) is a natural place to study the linear behavior of functions on \(X\) near \(x\).  We have also set the definitions up so that we can easily generalize to higher-order approximations:
@@ -757,7 +763,11 @@ Consider the \(C_n\)--equivariant cofiber sequence \[S(\C^m)_+ \to S^0 \to S^{\C
     & = \left( \colim_{m \to \infty} MU \sm S^{\C^m} \right)^{hC_n}.
     \end{align*}
 \end{enumerate}
-This last formula puts us in a position to calculate.  The Thom isomorphism for \(MU\) gives an identification \(MU \sm S^{\C} \simeq \Susp^2 MU\) as \(C_n\)--spectra, and the map \[(MU \sm S^0)^{hC_n} \to (MU \sm S^{\C})^{hC_n}\] can be identified with multiplication by the Thom class: \[MU^{\Susp^\infty BC_n} \xrightarrow{x \cdot -} (\Susp^2 MU)^{\Susp^\infty BC_n}.\]  In all, this gives \[MU^{tC_n} \simeq \colim_{m \to \infty} \left((MU \sm S^{\C^m})^{hC_n}\right) \simeq \colim_{m \to \infty} \left((\Susp^{2m} MU)^{BC_n}\right) \simeq MU^{BC_n}[x^{-1}]. \qedhere\]
+This last formula puts us in a position to calculate.  The Thom isomorphism for \(MU\) gives an identification \(MU \sm S^{\C} \simeq \Susp^2 MU\) as \(C_n\)--spectra, and the map \[(MU \sm S^0)^{hC_n} \to (MU \sm S^{\C})^{hC_n}\] can be identified with multiplication by the Thom class: \[MU^{\Susp^\infty BC_n} \xrightarrow{x \cdot -} (\Susp^2 MU)^{\Susp^\infty BC_n}.\]  In all, this gives
+\begin{align*}
+MU^{tC_n} & \simeq \colim_{m \to \infty} \left((MU \sm S^{\C^m})^{hC_n}\right) \\
+& \simeq \colim_{m \to \infty} \left((\Susp^{2m} MU)^{BC_n}\right) \simeq MU^{BC_n}[x^{-1}]. \qedhere
+\end{align*}
 \end{proof}
 
 To apply this machinery in our case, we need only equip \(MU\) with the factorized multiplication maps appearing in the definition of an \(H_\infty\)--ring spectrum.  (In fact, we will note that this enriches to an  \index{H infty ring spectrum@\(H_\infty\)--ring spectrum!H infinity 2 on MU@\(H_\infty^2\)--structure on \(MU\)}\(H_\infty^2\)--ring spectrum structure in the next Lecture.)
@@ -1027,7 +1037,12 @@ In what follows, the reader should carefully remember the degree conventions ste
 \begin{proof}[{Proof of \Cref{CGenerationForFiniteCplx}}]
 We can immediately reduce the claim in two ways.  First, it is true if and only if it is also true for reduced cohomology.  Second, because \(MU^{2*+1}(*) = 0\),\footnote{This is a direct consequence of the \emph{geometric} definition of \(U\)--structured bordism.} we can restrict attention just to \(MU^{2*}(X)\), since we can then handle the odd-degree parts of \(MU^*(X)\) by suspending \(X\) once.  Defining \[R^{2*} := C \cdot \sum_{q > 0} MU^{2q}(X),\] we can thus focus on the claim \[\widetilde{MU}^{2*}(X) \stackrel{?}{=} C \cdot \sum_{q > 0} MU^{2q}(X).\]  Noting that the claim is trivially true for all positive values of \(*\), we will show this by working \(p\)--locally and inducting on the value of ``\(-*\)''.
 
-Suppose that \[R^{-2j}_{(p)} = \widetilde{MU}^{-2j}(X)_{(p)}\] for \(j < q\) and consider \(x \in \widetilde{MU}^{-2q}(X)\).  Then, for \(m \gg 0\), we have \[w^m P^{C_p}(x) = \sum_{|\alpha| \le m-q} w^{m-q - |\alpha|} a(t)^\alpha s_\alpha x = w^{m-q} x + \sum_{\substack{|\alpha| \le m-q \\ \alpha \ne 0}} w^{m-q - |\alpha|} a(t)^\alpha s_\alpha x.\]  Recall that \(w\) is a power series in \(t\) with coefficients in \(C\) and leading term \((p-1)! \cdot t^{p-1}\), so that \(t^{p-1} = w \cdot \theta(t)\) for some multiplicatively invertible series \(\theta(t)\) with coefficients in \(C\).  Since \(s_\alpha\) raises degree, we have \(s_\alpha x \in R\) by the inductive hypothesis, and we may thus collect all those terms (as well as many factors of \(\theta(t)^{-1}\)) into a series \(\psi_x(t) \in R_{(p)}\llbracket t \rrbracket\) to write \[t^N(w^q P^{C_p}(x) - x) = \psi_x(t),\] where \(N = (m-q)(p-1)\).
+Suppose that \[R^{-2j}_{(p)} = \widetilde{MU}^{-2j}(X)_{(p)}\] for \(j < q\) and consider \(x \in \widetilde{MU}^{-2q}(X)\).  Then, for \(m \gg 0\), we have
+\begin{align*}
+w^m P^{C_p}(x) & = \sum_{|\alpha| \le m-q} w^{m-q - |\alpha|} a(t)^\alpha s_\alpha x \\
+& = w^{m-q} x + \sum_{\substack{|\alpha| \le m-q \\ \alpha \ne 0}} w^{m-q - |\alpha|} a(t)^\alpha s_\alpha x.
+\end{align*}
+Recall that \(w\) is a power series in \(t\) with coefficients in \(C\) and leading term \((p-1)! \cdot t^{p-1}\), so that \(t^{p-1} = w \cdot \theta(t)\) for some multiplicatively invertible series \(\theta(t)\) with coefficients in \(C\).  Since \(s_\alpha\) raises degree, we have \(s_\alpha x \in R\) by the inductive hypothesis, and we may thus collect all those terms (as well as many factors of \(\theta(t)^{-1}\)) into a series \(\psi_x(t) \in R_{(p)}\llbracket t \rrbracket\) to write \[t^N(w^q P^{C_p}(x) - x) = \psi_x(t),\] where \(N = (m-q)(p-1)\).
 
 Consider the set of possible integers \(N\) for which we can write such an equation---we know that \(N = (m-q)(p - 1)\) works, but we now also consider values of \(N\) which are not multiples of \((p - 1)\).  We aim to conclude that \(N = 1\) is the minimum of this set, so suppose that \(N\) is the minimum such value.  Using \Cref{RestrictingSteenrodOpToBasepoint}, we find that restricting this equation along the inclusion \(i\co X \to X \times BU(1)[p]\) sets \(t = 0\) and yields \(\psi_x(0) = 0\).  It follows that \(\psi_x(t) = t \phi_x(t)\) is at least once \(t\)--divisible, and thus \[t (t^{N-1}(w^q P^{C_p}x - x) - \phi_x(t)) = 0.\]  Appealing to \Cref{QuillensGysinFact}, we produce a class \(y \in \widetilde{MU}^{-2q + 2(N-1)}(X)\) with \[t^{N-1}(w^q P^{C_p}(x) - x) = \phi_x(x) + y \<p\>(t).\]  If \(N > 1\), then \(y \in R_{(p)}\) for degree reasons and hence the right-hand side gives a series expansion contradicting our minimality hypothesis.  So, \(N = 1\), the class \(y\) lies in the critical degree \(-2q\), and the outer factor of \(t^{N-1}\) is not present in the last expression.\footnote{One can interpret the proof thus far as giving a bound on the amount of \(w\)--torsion needed to get the stability relation described in \Cref{QuillensKeyRelation}.  Our answer is quite surprising: we have found that we need just a single \(w\) (indeed, a single \(t\)), which isn't much stability at all!}  Restricting along \(i\) again to set \(w = t = 0\) and \(P^{C_p}(x) = x^p\), we obtain the equation \[\left. \begin{array}{rr} -x & \text{if \(q > 0\)} \\ x^p - x & \text{if \(q = 0\)} \end{array} \right\} = \phi_x(0) + py.\]
 
