--- a/sigma.tex
+++ b/sigma.tex
@@ -384,7 +384,7 @@ MU[2k, \infty) \arrow["\Delta"]{r} & MU[2k, \infty) \times BU[2k, \infty).
 \end{center}
 The diagonal at the level of \((\CP^\infty)^{\times k}\) is responsible for the cup product, so that the classes in the cohomology of projective space which induce the maps
 \begin{align*}
-\Spec E_0 MU[2k, \infty) & \to C^k(\CP^\infty_E; \sheaf I(0)), &
+\Spec E_0 MU[2k, \infty) & \to C^k(\CP^\infty_E; \sheaf I(0)), \\
 \Spec E_0 BU[2k, \infty) & \to C^k(\CP^\infty_E; \Gm)
 \end{align*}
 literally multiply together to give the description of the action.  This multiplication of sections is exactly the action claimed in the model.
