--- a/finite.tex
+++ b/finite.tex
@@ -177,7 +177,7 @@ The \index{completion}\textit{\(E\)--nilpotent completion} of \(X\) is the total
 Ravenel proves the following generalization of \Cref{DescentFromHFpToHZp}.  Let \(E\) be a connective ring spectrum, let \(J\) be the set of primes complementary to those primes \(p\) for which \(E_*\) is uniquely \(p\)--divisible, and let \(X\) be a connective spectrum.\footnote{Even for connective ring spectra \(E\), the Bousfield localization \(L_E X\) does \emph{not} have to recover an arithmetic localization of \(X\) if \(X\) is not connective.  Take \(E = H\Z\) and \(X = KU\), which Snaith's theorem presents as \(X = KU = \Susp^\infty_+ \CP^\infty[\beta^{-1}]\), where \(\beta\co \CP^1 \to \CP^\infty\) is the Bott element.  This gives \(H\Z_* KU = H\Z_*(\CP^\infty[\beta^{-1}]) = (H\Z_* \CP^\infty)[b_1^{-1}]\).  We can identify the pieces in turn: \Cref{HZGivesGa} shows \(\CP^\infty_{H\Z} = \G_a\), so the dual Hopf algebra \((\sheaf O_{\G_a})^* = H\Z_* \CP^\infty\) is a divided polynomial algebra on the class \(b_1\).  Inverting \(b_1\) then gives \((H\Z_* \CP^\infty)[b_1^{-1}] = \Gamma[b_1][b_1^{-1}] = \Q[b_1^\pm]\), so that, in particular, there is a weak equivalence \(H\Z \sm KU \to H\Q \sm KU\).  The cofiber \(KU \to KU \otimes \Q \to KU \otimes \Q/\Z\) is thus a nonzero \(H\Z\)--acyclic spectrum.  You can also work this example without knowing Snaith's theorem: all you really need to know is that \(\Susp^\infty_+ \CP^\infty[\beta^{-1}] \to KU\) is a map of ring spectra, so that \(\pi_0 \Susp^\infty_+ \CP^\infty[\beta^{-1}]\) can't be a rational group since \(\pi_0 KU = \Z\).  Another entertaining consequence of this is \(F(KU/p, \S) = 0\).}  If each element of \(E_*\) has finite order, then \(X^\wedge_E = X^\wedge_J\) gives the arithmetic completion of \(X\)---which we reinterpret as \(\S^\wedge_J \to E\) being of effective descent for connective objects.  Otherwise, if \(E_*\) has elements of infinite order, then \(X^\wedge_E = X_{(J)}\) gives the arithmetic localization---which we reinterpret as saying that \(\S_{(J)} \to E\) is of effective descent.  Finding more encompassing conditions on maps \(f\co R \to S\) of \(E_\infty\)--rings for which descent holds is a subject of serious study~\cite[Appendix D]{LurieSAG}.
 \end{remark}
 
-Finally, we can interrelate these algebraic and topological notions of descent by studying the coskeletal filtration spectral sequence for \(\pi_* X^\wedge_E\), which we define to be the \index{Adams spectral sequence}\textit{\(E\)--Adams spectral sequence} for \(X\).  Applying the homotopy groups functor to the cosimplicial ring spectrum \(\mathcal D_E\) gives a cosimplicial ring \(\pi_* \mathcal D_E\), which we would like to connect with an algebraic descent object of the sort considered in \Cref{StrictCechDescentRemark}.  In order to make this happen, we need two niceness conditions on \(E\):
+Finally, we can interrelate these algebraic and topological notions of descent by studying the coskeletal filtration spectral sequence\footnote{The reader who would like a refresher about the construction of spectral sequences is referred to Boardman's exceptional article~\cite{BoardmanConditionallyConvergent}.} for \(\pi_* X^\wedge_E\), which we define to be the \index{Adams spectral sequence}\textit{\(E\)--Adams spectral sequence} for \(X\).  Applying the homotopy groups functor to the cosimplicial ring spectrum \(\mathcal D_E\) gives a cosimplicial ring \(\pi_* \mathcal D_E\), which we would like to connect with an algebraic descent object of the sort considered in \Cref{StrictCechDescentRemark}.  In order to make this happen, we need two niceness conditions on \(E\):
 
 \begin{definition}[\textbf Commutativity \textbf Hypothesis]
 An even-periodic ring spectrum \(E\) satisfies \index{commutativity hypothesis@commutativity hypothesis, \CH}{\CH} when the ring \(\pi_* E^{\sm j}\) is commutative for all \(j \ge 1\).  In this case, we can form the simplicial scheme \[\context{E} = \Spec \pi_0 \mathcal D_E,\] called the \index{context}\textit{context} of \(E\).
@@ -203,7 +203,7 @@ Let \(A\) and \(\Gamma\) be commutative rings with associated affine schemes \(X
 \chi \co \Gamma & \to \Gamma, & (-)^{-1}\co X_1 & \to X_1, \\
 \Delta \co \Gamma & \to \Gamma \presuper{\eta_R}{\underset{A}\otimes}^{\eta_L} \Gamma, & \circ\co X_1 \presuper{t}{\underset{X_0}{\times}}^{s} X_1 & \to X_1,
 \end{align*}
-such that \((X_0, X_1)\) forms a groupoid scheme.  An \index{comodule}\textit{\((A, \Gamma)\)--comodule} is an \(A\)--module equipped with a \(\Gamma\)--comodule structure, and such a comodule is equivalent to a Cartesian quasicoherent sheaf on the nerve of \((X_0, X_1)\).
+such that \((X_0, X_1)\) forms a groupoid scheme.  An \index{comodule}\textit{\((A, \Gamma)\)--comodule} is an \(A\)--module equipped with a \(\Gamma\)--comodule structure, and such a comodule is equivalent to a Cartesian quasicoherent sheaf on the nerve of \((X_0, X_1)\).\footnote{An extremely---excuse the pun---\emph{enlightening} discussion of the intricacies of this construction was set out by Boardman~\cite{BoardmanEightfoldWay} in the traditional language of Hopf algebroids.}
 \end{definition}
 
 \begin{example}
